--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "break_infinity.js": "^2.2.0",
     "immer": "^10.1.1",
+    "lucide-react": "^0.416.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
